bio done first draft

--- a/src/index.html
+++ b/src/index.html
@@ -71,7 +71,7 @@
                 class="img-fluid rounded shadow-lg"
                 height="auto"
                 width="300px"
-                src="assets/profile.jpg"
+                src="assets/profile-photo-1.jpg"
                 alt="Profile Image"
               />
             </div>
@@ -79,11 +79,24 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info load-hidden">
               <p class="about-wrapper__info-text">
-                This is where you can describe about yourself. The more you
-                describe about yourself, the more chances you can!
+                My coding journey started at a co-work space in Sofia, Bulgaria,
+                seeing my friend and deskmates espresso fueled fingers fly
+                across the keyboard in a flow state, I realized that code is
+                creative, and I love to create things.
               </p>
               <p class="about-wrapper__info-text">
-                Extra Information about you! like hobbies and your goals.
+                I started digging into online courses in 2022 and picked up a
+                mentor to help me navigate a path to becoming a developer. My
+                intention is to be a part of a team building modern web apps
+                that will help people in some way big or small to to help
+                improve some aspect of their life.
+              </p>
+
+              <p class="about-wrapper__info-text">
+                My other interests are playing classic rock, funk and R&B on my
+                guitar. I try get out in nature a few days a week with hikes in
+                the Bay Area hills. Travel always awakens my spirit, my recent
+                adventures led to living in Istanbul, Turkey for 6 months.
               </p>
               <span class="d-flex mt-3">
                 <a
