project descriptions added

--- a/src/index.html
+++ b/src/index.html
@@ -128,8 +128,13 @@
                 <h3 class="project-wrapper__text-title">Idea Board</h3>
                 <div>
                   <p class="mb-4">
-                    This is my first CRUD app! I got to dive in and learn about
-                    sorting.
+                    This is my first CRUD app! After about half a dozen side
+                    projects with React I took on this one as a challenge to
+                    prepare for technical interviews. I approached it with first
+                    trying to an idea with a title only in the card. I kept
+                    pushing myself to take project further with adding a
+                    character countdown in the body of the message and working
+                    on sorting by date and alphabetically.
                   </p>
                 </div>
                 <a
@@ -243,11 +248,17 @@
                 <h3 class="project-wrapper__text-title">Calculator</h3>
                 <div>
                   <p class="mb-4">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Excepturi neque, ipsa animi maiores repellendus distinctio
-                    aperiam earum dolor voluptatum consequatur blanditiis
-                    inventore debitis fuga numquam voluptate ex architecto
-                    itaque molestiae.
+                    The problem was that I had little experience with creating
+                    Javascript logic. After a few basic API projects my mentor
+                    presented a vanilla JS calculator as a way of leveling up my
+                    logic skills. I must admit at the time where my skills were
+                    at this seemed overwhelming. To overcome procastination I
+                    figured I would start with something simple to just get the
+                    ball rolling on the project. I got basic design going with
+                    HTML and CSS. Where do we go from there? Can we get a number
+                    in the display? Inch by inch I moved forward with project
+                    and overcame numerous challenges. After it was completed in
+                    vanilla JS, I refactored it into React.
                   </p>
                 </div>
                 <a
@@ -301,11 +312,13 @@
                 <h3 class="project-wrapper__text-title">Tic Tac Toe</h3>
                 <div>
                   <p class="mb-4">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Excepturi neque, ipsa animi maiores repellendus distinctio
-                    aperiam earum dolor voluptatum consequatur blanditiis
-                    inventore debitis fuga numquam voluptate ex architecto
-                    itaque molestiae.
+                    On the surface of it I thought a Tic Tac Toe app would be
+                    simple after completing a React Calculator. I was wrong. It
+                    can be simple or you can make it more complex by playing
+                    against a computer, which I did. I had a breakthrough in
+                    this project with working with reducers, learning about to
+                    keep functions simple, and seeing that you can pass booleans
+                    as arguments in functions to part of state on and off.
                   </p>
                 </div>
                 <a
@@ -359,11 +372,15 @@
                 <h3 class="project-wrapper__text-title">Markdown Previewer</h3>
                 <div>
                   <p class="mb-4">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Excepturi neque, ipsa animi maiores repellendus distinctio
-                    aperiam earum dolor voluptatum consequatur blanditiis
-                    inventore debitis fuga numquam voluptate ex architecto
-                    itaque molestiae.
+                    This project helped me to realize that packages can be an
+                    tool to arrive at a solution. I don't need to create a
+                    hammer to hit a nail. I just need to find the right hammer
+                    for the nail. Navigating the documentation on the associated
+                    packages for this project was a beast. I found a solution
+                    where only one package was needed to be installed and did
+                    not have as many other dependent packages, so I rolled with
+                    that solution because I figured it would be easier to
+                    troubleshoot.
                   </p>
                 </div>
                 <a
@@ -417,13 +434,16 @@
                 <h3 class="project-wrapper__text-title">Pomodoro Timer</h3>
                 <div>
                   <p class="mb-4">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Excepturi neque, ipsa animi maiores repellendus distinctio
-                    aperiam earum dolor voluptatum consequatur blanditiis
-                    inventore debitis fuga numquam voluptate ex architecto
-                    itaque molestiae.
+                    I feel like with this project things were starting to click
+                    in my understanding of state management. One of the
+                    challenges was to figure out how to get a clock to
+                    countdown. Once I overcame that block the project rolled
+                    pretty smoothly. I decided throw in a little self imposed
+                    challenge of having the UI of the timer remote toggle colors
+                    depending on if the user is in 'session' or on 'break'.
                   </p>
                 </div>
+
                 <a
                   rel="noreferrer"
                   target="_blank"
