first draft of site complete

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="shortcut icon" type="image/png" href="assets/favicon.png" />
+    <link rel="shortcut icon" type="image/png" href="assets/favicon.ico" />
 
     <!-- Todo: put here your site title -->
     <title>[Nate Mueller] | Front End Web Developer</title>
@@ -487,6 +487,65 @@
             </div>
           </div>
           <!-- /END Project -->
+
+          <!-- Notice: each .row is a project -->
+          <div class="row">
+            <div class="col-lg-4 col-sm-12">
+              <div class="project-wrapper__text load-hidden">
+                <h3 class="project-wrapper__text-title">Git Friends</h3>
+                <div>
+                  <p class="mb-4">
+                    We all have to start somewhere. This was initially my first
+                    vanilla JS project where I hit an API. We all remember
+                    hitting our first API right? That feeling you get when the
+                    data comes back :) Nothing like it! I got to learn about the
+                    forEach loops and apply template literals for dynamic
+                    searches. I later refactored this to React.
+                  </p>
+                </div>
+
+                <a
+                  rel="noreferrer"
+                  target="_blank"
+                  class="cta-btn cta-btn--hero"
+                  href="https://getting-friends-react.vercel.app/"
+                >
+                  See Live
+                </a>
+                <a
+                  rel="noreferrer"
+                  target="_blank"
+                  class="cta-btn text-color-main"
+                  href="https://github.com/codeAdventureNow/Pomodoro"
+                >
+                  Source Code
+                </a>
+              </div>
+            </div>
+            <div class="col-lg-8 col-sm-12">
+              <div class="project-wrapper__image load-hidden">
+                <a
+                  rel="noreferrer"
+                  href="https://getting-friends-react.vercel.app/"
+                  target="_blank"
+                >
+                  <div
+                    data-tilt
+                    data-tilt-max="4"
+                    data-tilt-glare="true"
+                    data-tilt-max-glare="0.5"
+                    class="thumbnail rounded js-tilt"
+                  >
+                    <img
+                      alt="Project Image"
+                      class="img-fluid"
+                      src="assets/friends.png"
+                    />
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </section>
