--- a/src/index.html
+++ b/src/index.html
@@ -80,9 +80,9 @@
             <div class="about-wrapper__info load-hidden">
               <p class="about-wrapper__info-text">
                 My coding journey started at a co-work space in Sofia, Bulgaria,
-                seeing my friend and deskmates espresso fueled fingers fly
-                across the keyboard in a flow state, I realized that code is
-                creative, and I love to create things.
+                seeing my friend's espresso fueled fingers fly across the
+                keyboard in a flow state, I realized that coding is creative,
+                and I love to create things.
               </p>
               <p class="about-wrapper__info-text">
                 I started digging into online courses in 2022 and picked up a
