added skills to bottom of the page.

--- a/src/index.html
+++ b/src/index.html
@@ -551,6 +551,30 @@
     </section>
     <!-- /END Projects Section -->
 
+    <section>
+      <div class="skill">
+        <h1>My Skills</h1>
+
+        <li>
+          <h3>HTML</h3>
+          <span class="bar"><span class="html"></span></span>
+        </li>
+        <li>
+          <h3>CSS</h3>
+          <span class="bar"><span class="css"></span></span>
+        </li>
+        <li>
+          <h3>JAVASCRIPT</h3>
+          <span class="bar"><span class="javascript"></span></span>
+        </li>
+        <li>
+          <h3>REACT
+          <span class="bar"><span class="react"></span></span>
+        </li>
+        
+      </div>
+    </section>
+
     <!-- **** Contact Section **** -->
     <section id="contact">
       <div class="container">
