added lint version of tic tac toe with reducer

--- a/src/index.html
+++ b/src/index.html
@@ -336,7 +336,7 @@
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn cta-btn--hero"
-                  href="https://tic-tac-toe-vite-gules.vercel.app/"
+                  href="https://tic-tac-toe-lint.vercel.app/"
                 >
                   See Live
                 </a>
@@ -344,7 +344,7 @@
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn text-color-main"
-                  href="https://github.com/codeAdventureNow/TicTacToeVite"
+                  href="https://github.com/codeAdventureNow/TicTacToeLint"
                 >
                   Source Code
                 </a>
@@ -354,7 +354,7 @@
               <div class="project-wrapper__image load-hidden">
                 <a
                   rel="noreferrer"
-                  href="https://tic-tac-toe-vite-gules.vercel.app/"
+                  href="https://tic-tac-toe-lint.vercel.app/"
                   target="_blank"
                 >
                   <div
