--- a/src/index.html
+++ b/src/index.html
@@ -112,7 +112,7 @@
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn cta-btn--resume"
-                  href="assets/resume.pdf"
+                  href="assets/Nate-Mueller-Front-End-Web-Dev.pdf"
                 >
                   View Resume
                 </a>
